# mcppt

./: LICENSE  MCPTROTTER_ARTICLE.md  MCPTROTTER_MEDIUM.md  OPERATOR_GUIDE.md  README.md  app.py  pyproject.toml  requirements.txt  smoke_test.py  test_server.py  vuln_server.py
.github/workflows/: ci.yml
mcppt/: checks.py  cli.py  core.py  report.py  server.py  shell.py  tui.py
tests/: test_checks.py  test_core.py
